--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,9 +8,14 @@
     "extends": "eslint:recommended",
     "installedESLint": true,
     "parserOptions": {
+        "ecmaVersion": 7,
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true,
-            "jsx": true
+            "jsx": true,
+            "arrowFunctions": true,
+            "classes": true,
+            "modules": true,
+            "defaultParams": true
         },
         "sourceType": "module"
     },
@@ -33,6 +38,38 @@
         "semi": [
             "error",
             "never"
-        ]
+        ],
+        "no-empty": 0,
+        "comma-dangle": 0,
+        "no-unused-vars": 0,
+        "no-console": 0,
+        "no-const-assign": 2,
+        "no-dupe-class-members": 2,
+        "no-duplicate-case": 2,
+        "no-extra-parens": [
+            2,
+            "functions"
+        ],
+        "no-self-compare": 2,
+        "accessor-pairs": 2,
+        "comma-spacing": [
+            2,
+            {
+                "before": false,
+                "after": true
+            }
+        ],
+        "constructor-super": 2,
+        "new-cap": [
+            2,
+            {
+                "newIsCap": true,
+                "capIsNew": false
+            }
+        ],
+        "new-parens": 2,
+        "no-array-constructor": 2,
+        "no-class-assign": 2,
+        "no-cond-assign": 2
     }
 }
