--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^2.24.1",
+    "image-webpack-loader": "^3.0.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "node-sass": "^3.13.0",
