--- a/package.json
+++ b/package.json
@@ -24,14 +24,12 @@
   "dependencies": {
     "@types/node": "^6.0.46",
     "@types/react": "^0.14.44",
-    "antd-mobile": "^0.9.8",
     "babel-polyfill": "^6.16.0",
     "classnames": "^2.2.5",
     "express": "^4.14.0",
     "fastclick": "^1.0.6",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
-    "pug": "^2.0.0-beta6",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
@@ -41,8 +39,6 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
-    "react-tap-event-plugin": "^1.0.0",
-    "react-weui": "^0.4.1",
     "redux": "^3.6.0",
     "redux-actions": "^0.12.0",
     "redux-form": "^6.2.0",
@@ -56,14 +52,11 @@
     "vue-ssr": "^0.1.1",
     "vue-template-compiler": "^2.0.0-rc.6",
     "vuex": "^2.0.0-rc.3",
-    "vuex-router-sync": "^3.0.0",
-    "weui": "^0.4.3"
+    "vuex-router-sync": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
-    "babel-plugin-antd": "^0.5.1",
-    "babel-plugin-import": "^1.0.1",
     "babel-plugin-transform-class-properties": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.15.0",
@@ -76,7 +69,7 @@
     "eslint": "^3.11.1",
     "eslint-plugin-react": "^6.8.0",
     "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^2.0.0-beta.3",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^2.24.1",
     "image-webpack-loader": "^3.0.0",
@@ -98,7 +91,7 @@
     "style-loader": "^0.13.1",
     "vue-loader": "^9.2.2",
     "vue-router": "^2.0.0",
-    "webpack": "^2.1.0-beta.25",
+    "webpack": "^2.1.0-beta.27",
     "webpack-dev-middleware": "^1.7.0",
     "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-hot-middleware": "^2.12.2",
