--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "postcss-pxtorem": "^3.3.1",
     "precss": "^1.4.0",
     "pure-render-decorator": "^1.2.1",
+    "react-css-modules": "^4.1.0",
+    "resolve-url-loader": "^1.6.1",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
     "shelljs": "^0.7.4",
